--- a/vin.ipynb
+++ b/vin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,481 +21,562 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wmi = '''19U\n",
-    "2HH\n",
-    "2HN\n",
-    "5J8\n",
-    "JAE\n",
-    "JH4\n",
-    "ZAR\n",
-    "137\n",
-    "1AC\n",
-    "1AM\n",
-    "1JD\n",
-    "1XM\n",
-    "2CM\n",
-    "2CC\n",
-    "1JC\n",
-    "1JT\n",
-    "2BC\n",
-    "5SX\n",
-    "SCF\n",
-    "KL7\n",
-    "TRU\n",
-    "WA1\n",
-    "WAU\n",
-    "WUA\n",
-    "1WA\n",
-    "1WB\n",
+    "wmi = '''AAV\n",
+    "AC5\n",
+    "ADD\n",
+    "AFA\n",
+    "AHT\n",
+    "BR1\n",
+    "JA3\n",
+    "JA4\n",
+    "JA\n",
+    "JD\n",
+    "JF\n",
+    "JHA\n",
+    "JHO\n",
+    "JHF\n",
+    "JHG\n",
+    "JHL\n",
+    "JHN\n",
+    "JHZ\n",
+    "JH1\n",
+    "JH5\n",
+    "JK\n",
+    "JL5\n",
+    "JM1\n",
+    "JMB\n",
+    "JMY\n",
+    "JMZ\n",
+    "JN\n",
+    "JS\n",
+    "JT\n",
+    "JY\n",
+    "KL\n",
+    "KM\n",
+    "KMY\n",
+    "KM1\n",
+    "KN\n",
+    "KNM\n",
+    "KPA\n",
+    "KPT\n",
+    "LAE\n",
+    "LAL\n",
+    "LAN\n",
+    "LBB\n",
+    "LBE\n",
+    "LBM\n",
+    "LBP\n",
+    "LB2\n",
+    "LCE\n",
+    "LDC\n",
+    "LDD\n",
+    "LDF\n",
+    "LDN\n",
+    "LDY\n",
+    "LET\n",
+    "LE4\n",
+    "LFB\n",
+    "LFG\n",
+    "LFP\n",
+    "LFT\n",
+    "LFV\n",
+    "LFW\n",
+    "LFY\n",
+    "LGB\n",
+    "LGH\n",
+    "LGX\n",
+    "LHB\n",
+    "LH1\n",
+    "LJC\n",
+    "LJ1\n",
+    "LKL\n",
+    "LL6\n",
+    "LL8\n",
+    "LMC\n",
+    "LPR\n",
+    "LPS\n",
+    "LRW\n",
+    "LSG\n",
+    "LSJ\n",
+    "LSV\n",
+    "LSY\n",
+    "LTP\n",
+    "LTV\n",
+    "LUC\n",
+    "LVS\n",
+    "LVV\n",
+    "LVZ\n",
+    "LV3\n",
+    "LZM\n",
+    "LZE\n",
+    "LZG\n",
+    "LZP\n",
+    "LZY\n",
+    "LZZ\n",
+    "L4B\n",
+    "L5C\n",
+    "L5K\n",
+    "L5N\n",
+    "L5Y\n",
+    "L85\n",
+    "L8X\n",
+    "MAB\n",
+    "MAC\n",
+    "MAJ\n",
+    "MAK\n",
+    "MAL\n",
+    "MAT\n",
+    "MA1\n",
+    "MA3\n",
+    "MA6\n",
+    "MA7\n",
+    "MB8\n",
+    "MBH\n",
+    "MBJ\n",
+    "MBR\n",
+    "MB1\n",
+    "MCA\n",
+    "MCB\n",
+    "MC2\n",
+    "MDH\n",
+    "MD2\n",
+    "MD9\n",
+    "MEC\n",
+    "MEE\n",
+    "MEX\n",
+    "MHF\n",
+    "MHR\n",
+    "MLC\n",
+    "NAA\n",
+    "NAP\n",
+    "MLH\n",
+    "MMA\n",
+    "MMB\n",
+    "MMC\n",
+    "MML\n",
+    "MMM\n",
+    "MMS\n",
+    "MMT\n",
+    "MMU\n",
+    "MM8\n",
+    "MNB\n",
+    "MNT\n",
+    "MPA\n",
+    "MP1\n",
+    "MRH\n",
+    "MR0\n",
+    "MS0\n",
+    "MS3\n",
+    "NC9\n",
+    "NLA\n",
+    "NLE\n",
+    "NLH\n",
+    "NLN\n",
+    "NLR\n",
+    "NLT\n",
+    "NMB\n",
+    "NMC\n",
+    "NM0\n",
+    "NM4\n",
+    "NMT\n",
+    "NNA\n",
+    "NP9\n",
+    "PE1\n",
+    "PE3\n",
+    "PL1\n",
+    "PNA\n",
+    "R2P\n",
+    "RA1\n",
+    "RFB\n",
+    "RFG\n",
+    "RFL\n",
+    "RFT\n",
+    "RF3\n",
+    "SAB\n",
+    "SAD\n",
+    "SAL\n",
+    "SAJ\n",
+    "SAR\n",
+    "SAX\n",
+    "SA9\n",
+    "SB1\n",
+    "SBM\n",
+    "SCA\n",
     "SCB\n",
-    "1BA\n",
-    "1BB\n",
-    "1BD\n",
-    "4US\n",
-    "5UM\n",
-    "5UX\n",
+    "SCC\n",
+    "SCE\n",
+    "SCF\n",
+    "SCK\n",
+    "SDB\n",
+    "SED\n",
+    "SEY\n",
+    "SFA\n",
+    "SFD\n",
+    "SHH\n",
+    "SHS\n",
+    "SJN\n",
+    "SKF\n",
+    "SLP\n",
+    "SMT\n",
+    "SUF\n",
+    "SUL\n",
+    "SUP\n",
+    "SU9\n",
+    "SUU\n",
+    "SWV\n",
+    "TCC\n",
+    "TDM\n",
+    "TK9\n",
+    "TMA\n",
+    "TMB\n",
+    "TMK\n",
+    "TMP\n",
+    "TMT\n",
+    "TM9\n",
+    "TNE\n",
+    "TN9\n",
+    "TRA\n",
+    "TRU\n",
+    "TSB\n",
+    "TSE\n",
+    "TSM\n",
+    "TW1\n",
+    "TYA\n",
+    "TYB\n",
+    "UU1\n",
+    "UU2\n",
+    "UU3\n",
+    "UU4\n",
+    "UU5\n",
+    "UU6\n",
+    "UU7\n",
+    "UU9\n",
+    "UV9\n",
+    "UWR\n",
+    "UZT\n",
+    "U5Y\n",
+    "U6Y\n",
+    "VAG\n",
+    "VAN\n",
+    "VBK\n",
+    "VF1\n",
+    "VF2\n",
+    "VF3\n",
+    "VF4\n",
+    "VF6\n",
+    "VF7\n",
+    "VF8\n",
+    "VF9\n",
+    "VFA\n",
+    "VG5\n",
+    "VLU\n",
+    "VN1\n",
+    "VNE\n",
+    "VNK\n",
+    "VNV\n",
+    "VSA\n",
+    "VSE\n",
+    "VSK\n",
+    "VSS\n",
+    "VSX\n",
+    "VS6\n",
+    "VS7\n",
+    "VS9\n",
+    "VTH\n",
+    "VTL\n",
+    "VTT\n",
+    "VV9\n",
+    "VWA\n",
+    "VWV\n",
+    "VX1\n",
+    "WAG\n",
+    "WAU\n",
+    "WA1\n",
     "WBA\n",
     "WBS\n",
-    "WBX\n",
-    "1G4\n",
-    "3G4\n",
-    "3G5\n",
-    "5GA\n",
-    "2G4\n",
-    "1G6\n",
-    "1GE\n",
-    "1GY\n",
-    "3GY\n",
-    "W06\n",
-    "1C9\n",
-    "1G1\n",
-    "1GA\n",
-    "1GB\n",
-    "1GC\n",
-    "1GN\n",
-    "2G1\n",
-    "2G8\n",
-    "2GA\n",
-    "2GB\n",
-    "2GN\n",
-    "3G1\n",
-    "3GB\n",
-    "3GC\n",
-    "3GE\n",
-    "3GN\n",
-    "4G1\n",
-    "4KB\n",
-    "J8B\n",
-    "J8Z\n",
-    "KL1\n",
-    "1Y1\n",
-    "2C1\n",
-    "2CN\n",
-    "JG1\n",
-    "1G8\n",
-    "J81\n",
-    "1A4\n",
-    "1A8\n",
+    "WBW\n",
+    "WBY\n",
+    "WB1\n",
+    "WDA\n",
+    "WDB\n",
+    "WDC\n",
+    "WDD\n",
+    "WDF\n",
+    "WEB\n",
+    "WJM\n",
+    "WF0\n",
+    "WKE\n",
+    "WKK\n",
+    "WMA\n",
+    "WME\n",
+    "WMW\n",
+    "WMX\n",
+    "WMZ\n",
+    "WP0\n",
+    "WP1\n",
+    "WSM\n",
+    "W09\n",
+    "W0L\n",
+    "W0V\n",
+    "WUA\n",
+    "WVG\n",
+    "WVW\n",
+    "WV1\n",
+    "WV2\n",
+    "WV3\n",
+    "XLB\n",
+    "XLE\n",
+    "XLR\n",
+    "XL4\n",
+    "XL9\n",
+    "XMC\n",
+    "XMG\n",
+    "XP7\n",
+    "XTA\n",
+    "XTC\n",
+    "XTH\n",
+    "XTT\n",
+    "XTU\n",
+    "XTY\n",
+    "XUF\n",
+    "XUU\n",
+    "XW8\n",
+    "XWB\n",
+    "XWE\n",
+    "X1M\n",
+    "X4X\n",
+    "X7L\n",
+    "X7M\n",
+    "Y4K\n",
+    "YBW\n",
+    "YB1\n",
+    "YCM\n",
+    "YE2\n",
+    "YH2\n",
+    "YK1\n",
+    "YSC\n",
+    "YS2\n",
+    "YS3\n",
+    "YS4\n",
+    "YTN\n",
+    "YT9\n",
+    "007\n",
+    "YT9\n",
+    "034\n",
+    "YU7\n",
+    "YVV\n",
+    "YV1\n",
+    "YV4\n",
+    "YV2\n",
+    "YV3\n",
+    "Y3M\n",
+    "Y6D\n",
+    "ZAA\n",
+    "ZAM\n",
+    "ZAP\n",
+    "ZAR\n",
+    "ZBN\n",
+    "ZCG\n",
+    "ZCF\n",
+    "ZDC\n",
+    "ZDM\n",
+    "ZDF\n",
+    "ZD0\n",
+    "ZD3\n",
+    "ZD4\n",
+    "ZFA\n",
+    "ZFC\n",
+    "ZFF\n",
+    "ZGU\n",
+    "ZHW\n",
+    "ZJM\n",
+    "ZJN\n",
+    "ZKH\n",
+    "ZLA\n",
+    "Z8M\n",
+    "1B3\n",
     "1C3\n",
     "1C4\n",
-    "1C8\n",
-    "2A3\n",
-    "2A4\n",
-    "2A8\n",
-    "2C3\n",
-    "2C4\n",
-    "2C8\n",
-    "3A4\n",
-    "3A8\n",
-    "3C3\n",
-    "3C4\n",
-    "3C8\n",
-    "3CA\n",
-    "4C3\n",
-    "JJ3\n",
-    "ZC2\n",
-    "1CY\n",
-    "KLA\n",
-    "JD1\n",
-    "JD2\n",
-    "1N6\n",
-    "JN1\n",
-    "JN6\n",
-    "3AB\n",
-    "1B3\n",
-    "1B4\n",
-    "1B6\n",
-    "1B7\n",
-    "1B7\n",
+    "1C6\n",
     "1D3\n",
-    "1D4\n",
-    "1D5\n",
-    "1D7\n",
-    "1D8\n",
-    "2B3\n",
-    "2B4\n",
-    "2B5\n",
-    "2B6\n",
-    "2B7\n",
-    "2B8\n",
-    "2D4\n",
-    "2D6\n",
-    "2D7\n",
-    "2D8\n",
-    "3B3\n",
-    "3B4\n",
-    "3B6\n",
-    "3B7\n",
-    "3D3\n",
-    "3D5\n",
-    "3D6\n",
-    "3D7\n",
-    "4B3\n",
-    "JB3\n",
-    "JB4\n",
-    "JB7\n",
-    "ML3\n",
-    "WD0\n",
-    "WD1\n",
-    "WD2\n",
-    "WD5\n",
-    "WD8\n",
-    "WDP\n",
-    "WDX\n",
-    "WDY\n",
-    "2.00E+03\n",
-    "2XM\n",
-    "4.00E+03\n",
-    "JE3\n",
-    "VF1\n",
-    "WKK\n",
-    "ZFF\n",
-    "ZFA\n",
-    "1EC\n",
-    "1GF\n",
-    "1F1\n",
-    "1F6\n",
     "1FA\n",
     "1FB\n",
     "1FC\n",
     "1FD\n",
-    "1FE\n",
     "1FM\n",
     "1FT\n",
-    "1ZV\n",
-    "2FA\n",
-    "2FD\n",
-    "2FM\n",
-    "2FT\n",
-    "3FA\n",
-    "3FC\n",
-    "3FD\n",
-    "3FR\n",
-    "3FT\n",
-    "9BF\n",
-    "JC2\n",
-    "KNJ\n",
-    "3FE\n",
     "1FU\n",
     "1FV\n",
-    "2FU\n",
-    "2FV\n",
-    "3AL\n",
-    "4UZ\n",
-    "5AS\n",
-    "4DR\n",
-    "JGC\n",
-    "2CK\n",
-    "15G\n",
-    "46G\n",
-    "1GD\n",
-    "1GJ\n",
-    "1GK\n",
+    "1F9\n",
+    "1G\n",
+    "1GC\n",
     "1GT\n",
-    "2G0\n",
-    "2G5\n",
-    "2GD\n",
-    "2GJ\n",
-    "2GK\n",
-    "2GT\n",
-    "3GD\n",
-    "3GK\n",
-    "3GT\n",
-    "4GD\n",
-    "4KD\n",
-    "J8D\n",
-    "1GH\n",
-    "1G5\n",
-    "5PV\n",
-    "JHB\n",
-    "1HG\n",
-    "2HG\n",
-    "2HJ\n",
-    "2HK\n",
-    "3HG\n",
-    "3HM\n",
-    "4S6\n",
-    "5FN\n",
-    "5J6\n",
-    "JHL\n",
-    "JHM\n",
-    "SHH\n",
-    "SHS\n",
-    "5GR\n",
-    "5GT\n",
-    "2HM\n",
-    "5NM\n",
-    "5NP\n",
-    "KM8\n",
-    "KMF\n",
-    "KMH\n",
-    "KND\n",
-    "5N3\n",
-    "JNK\n",
-    "JNR\n",
-    "JNX\n",
-    "1HS\n",
+    "1G1\n",
+    "1G2\n",
+    "1G3\n",
+    "1G4\n",
+    "1G6\n",
+    "1G8\n",
+    "1GM\n",
+    "1GN\n",
+    "1GY\n",
+    "1H\n",
+    "1HD\n",
     "1HT\n",
-    "1HV\n",
-    "2HS\n",
-    "2HT\n",
-    "3HA\n",
-    "3HS\n",
-    "3HT\n",
-    "1GG\n",
-    "4KL\n",
-    "4NU\n",
-    "4S1\n",
-    "4S2\n",
-    "J87\n",
-    "JAA\n",
-    "JAB\n",
-    "JAC\n",
-    "JAL\n",
-    "JR2X\n",
-    "LES\n",
-    "LM5\n",
-    "4GT\n",
-    "SAJ\n",
     "1J4\n",
-    "1J7\n",
     "1J8\n",
-    "2J4\n",
-    "17N\n",
-    "1NK\n",
-    "1XK\n",
-    "2NK\n",
-    "2XK\n",
-    "3BK\n",
-    "3NK\n",
-    "3WK\n",
-    "KNA\n",
-    "XTA\n",
-    "ZA9\n",
-    "ZHWX\n",
-    "SAL\n",
-    "2T2\n",
-    "JT6\n",
-    "JT8\n",
-    "JTH\n",
-    "JTJ\n",
-    "1L1\n",
-    "1LN\n",
-    "1MR\n",
-    "2LM\n",
-    "3LN\n",
-    "5LM\n",
-    "5LT\n",
-    "SCC\n",
+    "1L\n",
+    "1ME\n",
     "1M1\n",
     "1M2\n",
     "1M3\n",
-    "2M2\n",
-    "VG6\n",
-    "4SL\n",
-    "ZAM\n",
-    "WDB\n",
-    "1YV\n",
-    "4F2\n",
-    "4F4\n",
-    "JM1\n",
-    "JM2\n",
-    "JM3\n",
-    "1M8\n",
-    "4JG\n",
-    "WDC\n",
-    "WDD\n",
-    "WME\n",
-    "1ME\n",
-    "1ZW\n",
-    "2ME\n",
-    "2MH\n",
-    "2MR\n",
-    "3MA\n",
-    "3ME\n",
-    "4M2\n",
-    "6MP\n",
-    "WF1\n",
-    "WMW\n",
-    "1Z3\n",
-    "1Z5\n",
-    "1Z7\n",
-    "4A3\n",
-    "4A4\n",
-    "6MM\n",
-    "JA3\n",
-    "JA4\n",
-    "JA7\n",
-    "JL6\n",
-    "JW6\n",
-    "JW7\n",
-    "KPH\n",
-    "SA9\n",
-    "1N9\n",
-    "5FY\n",
-    "1N4\n",
-    "3N1\n",
-    "4N1\n",
-    "4N2\n",
-    "5N1\n",
-    "JN3\n",
-    "JN4\n",
-    "JN8\n",
-    "JNA\n",
-    "1G3\n",
-    "2G3\n",
-    "2B1\n",
-    "10T\n",
-    "4CD\n",
-    "11V\n",
-    "1P9\n",
-    "1NP\n",
-    "1XP\n",
-    "2NP\n",
-    "2XP\n",
-    "3BP\n",
-    "3NM\n",
-    "VF3\n",
-    "1P3\n",
-    "1P4\n",
-    "1P7\n",
-    "2P3\n",
-    "2P4\n",
-    "2P5\n",
-    "3P3\n",
-    "4P3\n",
-    "JP3\n",
-    "JP4\n",
-    "JP7\n",
-    "1G2\n",
-    "1GM\n",
-    "2C7\n",
-    "2G2\n",
-    "2G7\n",
-    "3G2\n",
-    "3G7\n",
-    "4G2\n",
-    "5Y2\n",
-    "6G2\n",
-    "JG7\n",
-    "KL2\n",
-    "WP0\n",
-    "WP1\n",
-    "2P9\n",
-    "2PC\n",
-    "1RF\n",
-    "SCA\n",
-    "5S3\n",
-    "JF4\n",
-    "YS3\n",
-    "1S9\n",
-    "5GZ\n",
-    "JTK\n",
-    "JTL\n",
-    "4S7\n",
-    "4VZ\n",
-    "2FW\n",
-    "2FZ\n",
-    "49H\n",
-    "JLS\n",
-    "SAX\n",
-    "4S3\n",
-    "4S4\n",
-    "JF1\n",
-    "JF2\n",
-    "JF3\n",
-    "2S2\n",
-    "2S3\n",
-    "JS2\n",
-    "JS3\n",
-    "JS4\n",
-    "KL5\n",
-    "177\n",
-    "1T8\n",
-    "1TU\n",
+    "1M4\n",
+    "1M9\n",
+    "1N\n",
     "1NX\n",
-    "2T1\n",
-    "3TM\n",
-    "4T1\n",
-    "4T3\n",
-    "4TA\n",
-    "5TB\n",
-    "5TD\n",
-    "5TE\n",
-    "5TF\n",
-    "JT2\n",
-    "JT3\n",
-    "JT4\n",
-    "JT5\n",
-    "JTD\n",
-    "JTE\n",
-    "JTM\n",
-    "JTN\n",
-    "SAT\n",
-    "45V\n",
-    "1V1\n",
+    "1P3\n",
+    "1PY\n",
+    "1R9\n",
     "1VW\n",
-    "3VW\n",
-    "9BW\n",
-    "9DW\n",
-    "WV2\n",
-    "WV3\n",
-    "WVG\n",
-    "WVW\n",
-    "4VA\n",
-    "4VH\n",
-    "4VL\n",
-    "4VM\n",
-    "YB3\n",
-    "YV1\n",
-    "YV2\n",
-    "YV4\n",
-    "YV5\n",
-    "4V1\n",
-    "4V2\n",
-    "4V4\n",
-    "4V5\n",
-    "4VG\n",
+    "1XK\n",
+    "1XP\n",
+    "1YV\n",
+    "1ZV\n",
+    "2A4\n",
+    "2BP\n",
+    "2B3\n",
+    "2B7\n",
+    "2C3\n",
+    "2CN\n",
+    "2D3\n",
+    "2FA\n",
+    "2FB\n",
+    "2FC\n",
+    "2FM\n",
+    "2FT\n",
+    "2FU\n",
+    "2FV\n",
+    "2FZ\n",
+    "2Gx\n",
+    "2G1\n",
+    "2G2\n",
+    "2G3\n",
+    "2G4\n",
+    "2G9\n",
+    "2HG\n",
+    "2HK\n",
+    "2HJ\n",
+    "2HM\n",
+    "2M\n",
+    "2NV\n",
+    "2P3\n",
+    "2T\n",
+    "2TP\n",
+    "2V4\n",
+    "2V8\n",
     "2WK\n",
     "2WL\n",
-    "5CK\n",
-    "5KJ\n",
-    "5KK\n",
-    "1WU\n",
-    "1WV\n",
-    "5B4\n",
-    "5T4\n",
-    "18X\n",
-    "'''.split()"
+    "2WM\n",
+    "363\n",
+    "3C4\n",
+    "3C6\n",
+    "3D3\n",
+    "3D4\n",
+    "3FA\n",
+    "3FE\n",
+    "3G\n",
+    "3H\n",
+    "3JB\n",
+    "3MD\n",
+    "3MZ\n",
+    "3N\n",
+    "3NS\n",
+    "3NE\n",
+    "3P3\n",
+    "3VW\n",
+    "46J\n",
+    "4EN\n",
+    "4F\n",
+    "4JG\n",
+    "4M\n",
+    "4P1\n",
+    "4RK\n",
+    "4S\n",
+    "4T\n",
+    "4T9\n",
+    "4UF\n",
+    "4US\n",
+    "4UZ\n",
+    "4V1\n",
+    "4V2\n",
+    "4V3\n",
+    "4V4\n",
+    "4V5\n",
+    "4V6\n",
+    "4VL\n",
+    "4VM\n",
+    "4VZ\n",
+    "538\n",
+    "5F\n",
+    "5J\n",
+    "5L\n",
+    "5N1\n",
+    "5NP\n",
+    "5T\n",
+    "58A\n",
+    "5YJ\n",
+    "56K\n",
+    "6AB\n",
+    "6F4\n",
+    "6F5\n",
+    "6FP\n",
+    "6G1\n",
+    "6G2\n",
+    "6H8\n",
+    "6MM\n",
+    "6T1\n",
+    "6U9\n",
+    "7SA\n",
+    "795\n",
+    "8AD\n",
+    "8AF\n",
+    "8AG\n",
+    "8AJ\n",
+    "8AK\n",
+    "8AP\n",
+    "8AW\n",
+    "8A1\n",
+    "8GD\n",
+    "8GG\n",
+    "8LD\n",
+    "935\n",
+    "936\n",
+    "92H\n",
+    "93H\n",
+    "93R\n",
+    "93U\n",
+    "93V\n",
+    "93X\n",
+    "93Y\n",
+    "94D\n",
+    "9BD\n",
+    "9BF\n",
+    "9BG\n",
+    "9BM\n",
+    "9BR\n",
+    "9BS\n",
+    "9BW\n",
+    "9FB\n",
+    "9GA'''.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,60 +605,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3031464148500000 314641\n",
-      "3031464148500000 314641\n",
-      "3031464148500000 314641\n",
-      "3031464148500000 314641\n",
-      "3031464148500000 314641\n",
+      "3230303738413231 303037\n",
       "3031464148500000 314641\n"
      ]
-    }
-   ],
-   "source": [
-    "for i in msg:\n",
-    "    for j in wmi_hex_string:\n",
-    "        if j in i:\n",
-    "            print(i, j)\n",
-    "\n",
-    "# Appears to be a Ford. 314641 converts to 1FA."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "['3031464148500000',\n",
-       " '3031464148500000',\n",
-       " '3031464148500000',\n",
-       " '3031464148500000',\n",
-       " '3031464148500000',\n",
-       " '3031464148500000']"
+       "['303037', '314641']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filter_30 = []\n",
+    "make = []\n",
     "for i in msg:\n",
-    "    if '30' in i[:2]:\n",
-    "        filter_30.append(i)\n",
-    "msg[3][:2]\n",
+    "    for j in wmi_hex_string:\n",
+    "        if j in i:\n",
+    "            if j not in make:\n",
+    "                make.append(j)\n",
+    "                print(i, j)\n",
     "\n",
-    "filter_30"
+    "make\n",
+    "\n",
+    "# Appears to be a Ford or Koenigsegg. \n",
+    "# Ford: 314641 converts to 1FA.\n",
+    "# Koen: 303037 to 007"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['  slcan0  4FF   [8]  10 14 24 12 37 60 00 62',\n",
+       " '  slcan0  4FF   [8]  32 32 36 30 35 36 30 00',\n",
+       " '  slcan0  4FF   [8]  10 14 24 12 37 60 00 62',\n",
+       " '  slcan0  4FF   [8]  30 31 46 41 48 50 00 00',\n",
+       " '  slcan0  4FF   [8]  11 03 5D 01 4E 00 00 00',\n",
+       " '  slcan0  4FF   [8]  30 31 46 41 48 50 00 00',\n",
+       " '  slcan0  4FF   [8]  10 14 24 12 37 60 00 62',\n",
+       " '  slcan0  4FF   [8]  30 31 46 41 48 50 00 00',\n",
+       " '  slcan0  4FF   [8]  32 32 36 30 35 36 30 00',\n",
+       " '  slcan0  4FF   [8]  11 03 5D 01 4E 00 00 00',\n",
+       " '  slcan0  4FF   [8]  30 31 46 41 48 50 00 00',\n",
+       " '  slcan0  4FF   [8]  11 03 5D 01 4E 00 00 00',\n",
+       " '  slcan0  4FF   [8]  30 31 46 41 48 50 00 00',\n",
+       " '  slcan0  4FF   [8]  31 33 35 4E 33 39 57 00',\n",
+       " '  slcan0  4FF   [8]  10 14 24 12 37 60 00 62',\n",
+       " '  slcan0  4FF   [8]  32 32 36 30 35 36 30 00',\n",
+       " '  slcan0  4FF   [8]  10 14 24 12 37 60 00 62',\n",
+       " '  slcan0  4FF   [8]  11 03 5D 01 4E 00 00 00',\n",
+       " '  slcan0  4FF   [8]  31 33 35 4E 33 39 57 00',\n",
+       " '  slcan0  4FF   [8]  10 14 24 12 37 60 00 62',\n",
+       " '  slcan0  4FF   [8]  32 32 36 30 35 36 30 00',\n",
+       " '  slcan0  4FF   [8]  11 03 5D 01 4E 00 00 00',\n",
+       " '  slcan0  4FF   [8]  31 33 35 4E 33 39 57 00',\n",
+       " '  slcan0  4FF   [8]  30 31 46 41 48 50 00 00',\n",
+       " '  slcan0  4FF   [8]  32 32 36 30 35 36 30 00',\n",
+       " '  slcan0  4FF   [8]  11 03 5D 01 4E 00 00 00',\n",
+       " '  slcan0  4FF   [8]  32 32 36 30 35 36 30 00',\n",
+       " '  slcan0  4FF   [8]  31 33 35 4E 33 39 57 00',\n",
+       " '  slcan0  4FF   [8]  10 14 24 12 37 60 00 62']"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter = [x for x in lines if x[10:13] == '4FF']\n",
+    "filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['  slcan0  4FF   [8]  10 14 24 12 37 60 00 62',\n",
+       " '  slcan0  4FF   [8]  32 32 36 30 35 36 30 00',\n",
+       " '  slcan0  4FF   [8]  30 31 46 41 48 50 00 00',\n",
+       " '  slcan0  4FF   [8]  11 03 5D 01 4E 00 00 00',\n",
+       " '  slcan0  4FF   [8]  31 33 35 4E 33 39 57 00']"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = []\n",
+    "for i in filter:\n",
+    "    if i not in data:\n",
+    "        data.append(i)\n",
+    "\n",
+    "data\n",
+    "\n",
+    "# VIN has 17 digits\n",
+    "# 32 32 36 30 35 36 30 00 = 2260560\n",
+    "# 30 31 46 41 48 50 00 00 = 01FAHP\n",
+    "# 31 33 35 4E 33 39 57 00 = 135N39W\n",
+    "# These appear to be potential VIN data"
    ]
   }
  ],
